ui_tests/tests/parsing/illegal-token.stderr
error[E010]: found illegal token U+95F4 `间`, but expected parameter, terminator, type annotation or keyword `of`
 --> ${DIRECTORY}/parsing/illegal-token.lushui:3:13
  |
3 | data System 间: 时
  |             ^^ unexpected token
  |

error: aborting due to previous error
 note: the error E010 has a detailed explanation
 help: run `lushui explain E010` to view it

